Fix overlap flexbox

--- a/src/sass/_sections/_overlap.scss
+++ b/src/sass/_sections/_overlap.scss
@@ -1,35 +1,39 @@
 .overlap {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: stretch;
     background: #fff;
     margin: 20px 30px;
-    padding: 10px 5px;
+    padding: 0 15px;
+    height: 50px;
     border-radius: 5px;
 
     &__title {
-        position: relative;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
     }
 
     &__menu {
         position: relative;
         width: 40px;
+        border-left: 1px solid $lightGrey;
 
         .circle {
             position: absolute;
-            top: -2px;
-            left: 10px;
+            top: 50%;
+            left: 15px;
             height: 3px;
             width: 3px;
             background: $blue;
             border-radius: 90px;
 
             &:first-child {
-                left: 0px;
+                left: 25px;
             }
 
             &:nth-child(2) {
-                left: 20px;
+                left: 35px;
             }
         }
     }
